# learn-opengl

./: .editorconfig  .fossa.yml  .gitignore  .gitmodules  Cargo.toml  README.md  install_assimp.bash  test.sh
.github/: install_assimp.sh
.github/workflows/: build.yml  release.yml
assets/shaders/: 1.vert  box.frag  cube.frag  cube2.frag  cube2.vert  frame.frag  light_cube.frag  light_cube.vert  offscreen.frag  offscreen.vert  phong.frag  phong.vert  spin.frag  spin.vert  square.frag  square.vert  triangle.frag  triangle.vert
lib/another_gl/: Cargo.toml
lib/gl/: Cargo.toml
lib/render_gl_derive/: Cargo.toml
lib/render_gl_derive/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: app_frame.rs  fonts.rs  frame.rs  input.rs  lib.rs  main.rs  model.rs  resources.rs  time.rs  triangle.rs  triangles.rs  ui.rs
src/geom/: camera.rs  light.rs  mod.rs
src/mesh/: cube.rs  cube2.rs  light_cube.rs  mod.rs  scene.rs
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  debug.rs  frame_buffer.rs  mod.rs  offscreen.rs  shader.rs  texture.rs  viewport.rs
src/render_gl/data/: mod.rs
src/render_gl/data/inner/: f32_f32.rs  f32_f32_f32.rs  i8_float.rs  int8.rs  mod.rs  u2_u10_u10_u10_rev_float.rs
src/scene/: cube.rs  mod.rs  phong.rs  scene.rs  spin.rs
