[package]
name = "another"
version = "0.1.0"
authors = ["Itsusinn奕䜣 <itsusinn@foxmail.com>"]
edition = "2021"

[dependencies]
once_cell = "1.12.0"
dashmap = "5.2.0"
atomic_float = "0.1.0"
serde = "1.0"
# GL-Framework&UI
sdl2 = { version = "*", features = ["bundled", "static-link"] }
egui = "0.16.1"
egui_sdl2_gl = "0.16.0"
# GL
glow = { version = "0.11.2"}
render_gl_derive = { path = "lib/render_gl_derive" }
# error-handling
thiserror = "1.0"
anyhow = "1.0"

# math
nalgebra = "0.31.0"

# assests
image = { version = "0.24.2",default-features = false,features = ["jpeg","png"]}

# russimp = "1.0.1"
gltf = "1.0.0"
arcstr = "1.1.3"

[build-dependencies]
walkdir = "2.3.1"

[profile.release]
lto = true
codegen-units = 1
